Fixed Width Spacing and general code cleanup

--- a/ch.3/Java Jam/javajam.css
+++ b/ch.3/Java Jam/javajam.css
@@ -1,13 +1,40 @@
-body { background-color: #FCEBB6;
-		color: #221811;
-		font-family: Verdana, Arial, sans-serif; }
-header { background-color: #D2B48C; text-align: 
-	center; }	
-h1		div.a {
-		line-height: 200%; }
-nav {text-align: center; }
-p.thick {
+body 
+{ 
+	background-color: #FCEBB6;
+	color: #221811;
+	font-family: Verdana, Arial, sans-serif; 
+}
+
+h1 
+{
+	color:#221811;
+	background-color:#D2B48C; 
+	text-align:center;
+	line-height: 200%; 
+}
+
+nav 
+{
+	text-align: center;
+	font-weight:bold; 
+}
+
+p.thick 
+{
 	font-weight: bold;
-}					
-footer { background-color: #D2B48C; font-size: 
-.60em; font-style: italic; text-align: center; }
+}	
+				
+footer 
+{ 
+	background-color: #D2B48C; 
+	font-size: .60em; 
+	font-style: italic; 
+	text-align: center; 
+}
+
+#wrapper 
+{
+	margin-left:auto;
+	margin-right:auto; 
+	width:80%; 
+}
